See commit description
- Switch to s6-overlay
- Default Dockerfile now uses qbittorrent from the alpine repo
- Healthcheck now also checks Firewall
- A lot of refactoring

--- a/example-wg-compose.yml
+++ b/example-wg-compose.yml
@@ -12,15 +12,12 @@ services:
       - VPN_ENABLED=yes
       - VPN_TYPE=wireguard
       - LAN_NETWORK=192.168.0.0/24
-      - HEALTH_CHECK_HOST=one.one.one.one
-      - HEALTH_CHECK_INTERVAL=300
       - ENABLE_SSL=yes
-      - UNPRIVILEGED=yes
     volumes:
-      - '/server/qbittorrent/:/config'
+      - './config/:/config'
     ports:
-     # - 80:8080
-      - 443:8080
+     - 80:8080
+     - 443:8080
     restart: unless-stopped
     cap_add:
       - NET_ADMIN
