--- a/rootfs/defaults/qBittorrent.conf
+++ b/rootfs/defaults/qBittorrent.conf
@@ -2,11 +2,13 @@
 Session\BTProtocol=Both
 
 [Preferences]
+Connection\UPnP=false
 Connection\PortRangeMin=8999
 Downloads\SavePath=/downloads/
-Downloads\TempPath=/downloads/temp/
-Downloads\TempPathEnabled=true
+Downloads\TempPath=/downloads/incomplete/
+Downloads\TempPathEnabled=false
 General\UseRandomPort=false
 WebUI\Username=admin
 WebUI\Port=8080
-WebUI\HostHeaderValidation=false
+WebUI\Address=*
+WebUI\ServerDomains=*
