--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -39,8 +39,8 @@ RUN \
 
 FROM alpine:3.14
 
-LABEL build_version="qBittorrent version: ${QBITTORRENT_VERSION} - Build-date: ${BUILD_DATE}"
-LABEL maintainer="trigus42"
+# You can find the available release tags at https://github.com/just-containers/s6-overlay/releases
+ARG S6_OVERLAY_VERSION="v2.2.0.3"
 
 # Exit if one of the cont-init.d scripts fails
 ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
@@ -68,7 +68,7 @@ RUN \
     # Install tools
     apk update; \
     apk add --no-cache \
-    s6-overlay \
+    wget \
     bash \
     wireguard-tools \
     dos2unix \
@@ -82,6 +82,13 @@ RUN \
     openssl \
     qt5-qtbase \
     libexecinfo; \
+    exit 0
+
+# Install s6-overlay
+ADD ./build/s6-overlay-arch /tmp/s6-overlay-arch
+RUN \
+    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}/s6-overlay-$(/tmp/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz; \
+    tar xzf /tmp/s6_overlay.tar.gz -C /
 
 COPY rootfs /
 
