--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -85,7 +85,7 @@ RUN \
     exit 0
 
 # Install s6-overlay
-ADD ./build/s6-overlay-arch /tmp/s6-overlay-arch
+COPY ./build/s6-overlay-arch /tmp/s6-overlay-arch
 RUN \
     wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}/s6-overlay-$(/tmp/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz; \
     tar xzf /tmp/s6_overlay.tar.gz -C /
