--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -88,7 +88,8 @@ RUN \
 COPY ./build/s6-overlay-arch /tmp/s6-overlay-arch
 RUN \
     wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_VERSION}/s6-overlay-$(/tmp/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz; \
-    tar xzf /tmp/s6_overlay.tar.gz -C /
+    tar xzf /tmp/s6_overlay.tar.gz -C /; \
+    rm -r /tmp/*
 
 COPY rootfs /
 
