Fix `Unauthorized` message when using different port
Add `WebUI\HostHeaderValidation=false` to default `qBittorrent.conf`

--- a/rootfs/defaults/qBittorrent.conf
+++ b/rootfs/defaults/qBittorrent.conf
@@ -10,5 +10,4 @@ Downloads\TempPathEnabled=false
 General\UseRandomPort=false
 WebUI\Username=admin
 WebUI\Port=8080
-WebUI\Address=*
-WebUI\ServerDomains=*
+WebUI\HostHeaderValidation=false
