Don't ignore tun,tap,wg interfaces
https://github.com/Trigus42/alpine-qbittorrentvpn/issues/20

--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -9,8 +9,7 @@ WORKDIR /root/
 RUN \
     apk update; \
     apk add --no-cache --virtual .build-deps autoconf automake build-base cmake curl git libtool linux-headers perl pkgconf python3 python3-dev re2c tar \
-    icu-dev libexecinfo-dev openssl-dev qt5-qtbase-dev qt5-qttools-dev zlib-dev qt5-qtsvg-dev ninja boost-dev; \
-    exit 0
+    icu-dev libexecinfo-dev openssl-dev qt5-qtbase-dev qt5-qttools-dev zlib-dev qt5-qtsvg-dev ninja boost-dev
 
 # Compile Libtorrent
 RUN \
