--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -8,32 +8,32 @@ WORKDIR /root/
 
 # Install build dependencies
 RUN \
-    apk update; \
+    apk update && \
     apk add --no-cache --virtual .build-deps autoconf automake build-base cmake curl git libtool linux-headers perl pkgconf python3 python3-dev re2c tar \
     icu-dev libexecinfo-dev openssl-dev qt5-qtbase-dev qt5-qttools-dev zlib-dev qt5-qtsvg-dev ninja boost-dev
 
 # Compile Libtorrent
 RUN \
-    git clone --shallow-submodules --recurse-submodules https://github.com/arvidn/libtorrent.git libtorrent && cd libtorrent; \
-    git checkout "${LIBTORRENT_TAG:-$(git tag -l --sort=-v:refname "v2*" | head -n 1)}"; \
+    git clone --shallow-submodules --recurse-submodules https://github.com/arvidn/libtorrent.git libtorrent && cd libtorrent && \
+    git checkout "${LIBTORRENT_TAG:-$(git tag -l --sort=-v:refname "v2*" | head -n 1)}" && \
     cmake -Wno-dev -G Ninja -B build \
         -D CMAKE_BUILD_TYPE="Release" \
         -D CMAKE_CXX_STANDARD=17 \
         -D CMAKE_INSTALL_LIBDIR="lib" \
-        -D CMAKE_INSTALL_PREFIX="/usr/local"; \
-    nice -n19 cmake --build build; \
+        -D CMAKE_INSTALL_PREFIX="/usr/local" && \
+    nice -n19 cmake --build build && \
     cmake --install build
 
 # Compile qBittorrent
 RUN \
-    git clone --shallow-submodules --recurse-submodules https://github.com/qbittorrent/qBittorrent.git qbittorrent && cd qbittorrent; \
-    git checkout "${QBITTORRENT_TAG:-$(git tag -l --sort=-v:refname "release*" | head -n 1)}"; \
+    git clone --shallow-submodules --recurse-submodules https://github.com/qbittorrent/qBittorrent.git qbittorrent && cd qbittorrent && \
+    git checkout "${QBITTORRENT_TAG:-$(git tag -l --sort=-v:refname "release*" | head -n 1)}" && \
     cmake -Wno-dev -G Ninja -B build \
         -D CMAKE_BUILD_TYPE="release" \
         -D CMAKE_CXX_STANDARD=17 \
         -D CMAKE_CXX_STANDARD_LIBRARIES="/usr/lib/libexecinfo.so" \
         -D CMAKE_INSTALL_PREFIX="/usr/local" \
-        -D GUI=OFF; \
+        -D GUI=OFF && \
     nice -n19 cmake --build build
 
 FROM alpine:3.16
@@ -43,32 +43,12 @@ ARG S6_OVERLAY_TAG="v2.2.0.3"
 
 # Exit if one of the cont-init.d scripts fails
 ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
-    
-RUN \
-    # Mount files from build stage
-    --mount=type=bind,from=builder,src=/root,dst=/mnt/build/ \
-    # Copy build files from ro mount
-    cp -r /mnt/build/libtorrent /root/; \
-    cp -r /mnt/build/qbittorrent /root/; \
-    # Add cmake
-    apk add --no-cache cmake; \
-    # Install libtorrent
-    cd /root/libtorrent; \
-    cmake --install build; \
-    # Install qBittorrent
-    cd /root/qbittorrent; \
-    cmake --install build; \
-    # Remove cmake
-    apk del --no-cache --purge cmake; \
-    # Remove build files
-    rm -r /root/libtorrent /root/qbittorrent
 
-COPY ./build/s6-overlay-arch /tmp/s6-overlay-arch
-COPY rootfs /
+COPY ./build /tmp/build
 
 RUN \
     # Install tools
-    apk update; \
+    apk update && \
     apk add --no-cache \
         bash \
         dos2unix \
@@ -84,12 +64,34 @@ RUN \
         qt5-qtbase \
         tzdata \
         wget \
-        wireguard-tools; \
+        wireguard-tools && \
     # Install s6-overlay
-    chmod +x /tmp/s6-overlay-arch; \
-    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/tmp/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz; \
-    tar -xf /tmp/s6_overlay.tar.gz -C /; \
-    rm -r /tmp/*; \
+    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/bin/sh /tmp/build/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz && \
+    tar -xf /tmp/s6_overlay.tar.gz -C / && \
+    rm -r /tmp/*
+    
+RUN \
+    # Mount files from build stage
+    --mount=type=bind,from=builder,src=/root,dst=/mnt/build/ \
+    # Copy build files from ro mount
+    cp -r /mnt/build/libtorrent /root/ && \
+    cp -r /mnt/build/qbittorrent /root/ && \
+    # Add cmake
+    apk add --no-cache cmake && \
+    # Install libtorrent
+    cd /root/libtorrent && \
+    cmake --install build && \
+    # Install qBittorrent
+    cd /root/qbittorrent && \
+    cmake --install build && \
+    # Remove cmake
+    apk del --no-cache --purge cmake && \
+    # Remove build files
+    rm -r /root/qbittorrent /root/libtorrent
+
+COPY rootfs /
+
+RUN \
     # Set exec permissions
     chmod +x -R /helper/ /etc/cont-init.d/ /etc/services.d/
 
