--- a/bake.yml
+++ b/bake.yml
@@ -5,13 +5,13 @@ services:
     image: trigus42/qbittorrentvpn
     build:
       context: .
-      dockerfile: ./Dockerfile.compile
+      dockerfile: ./Dockerfile
       args:
         QBITTORRENT_TAG: ${QBITTORRENT_TAG}
       x-bake:
         platforms:
           - "linux/amd64"
-          # - "linux/arm/v6"
-          # - "linux/arm/v7"
-          # - "linux/arm64"
+          - "linux/arm/v6"
+          - "linux/arm/v7"
+          - "linux/arm64"
         pull: true
