Fix: Container is halted if OpenVPN exits during startup

--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -64,7 +64,8 @@ RUN \
         qt5-qtbase \
         tzdata \
         wget \
-        wireguard-tools && \
+        wireguard-tools \
+        procps && \
     # Install s6-overlay
     wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/bin/sh /tmp/build/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz && \
     tar -xf /tmp/s6_overlay.tar.gz -C / && \
