--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,6 @@
-name: Docker
+name: Build docker image
 
 on:
-  schedule:
-    - cron: '17 5 * * *'
   push:
     branches: [ "master" ]
     # Publish semver tags as releases.
@@ -12,6 +10,7 @@ on:
     branches:
       - 'master'
   workflow_dispatch:
+
 
 env:
   REGISTRY: ghcr.io
@@ -66,6 +65,15 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
+      # For later use
+      - name: Get latest release
+        id: get_release
+        run: |
+          # Fetch release information and extract the release tag
+          RELEASE_TAG=$(curl -s https://api.github.com/repos/userdocs/qbittorrent-nox-static/releases/latest | jq -r '.tag_name')
+          echo "release_tag=$RELEASE_TAG" >> $GITHUB_OUTPUT
+          echo "latest release: $RELEASE_TAG"
+
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
@@ -94,3 +102,18 @@ jobs:
         # against the sigstore community Fulcio instance.
         run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign --yes {}@${{ steps.build-and-push.outputs.digest }}
 
+      # For use in check_update workflow
+      
+      - name: Store artifacts
+        if: github.event_name != 'pull_request'
+        run: |
+          # Store the newly fetched release version in a file
+          echo "${{ steps.get_release.outputs.RELEASE_TAG }}" > qbt-release-info
+          echo "Saved ${{ steps.get_release.outputs.RELEASE_TAG }} to qbt-release-info"
+
+      - name: Upload new artifacts
+        if: github.event_name != 'pull_request'
+        uses: actions/upload-artifact@v3
+        with:
+          name: qbt-release-info
+          path: qbt-release-info
