--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -54,7 +54,7 @@ RUN \
         dos2unix \
         grep \
         ipcalc \
-        iptables \
+        nftables \
         iputils \
         net-tools \
         openresolv \
