Use userspace wireguard-go instead of kernel module

--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -64,8 +64,9 @@ RUN \
         qt5-qtbase \
         sed \
         tzdata \
-        wget \
-        wireguard-tools && \
+        wget; \
+    apk add --repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing \
+        wireguard-go; \
     # Install s6-overlay
     wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/bin/sh /tmp/build/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz && \
     tar -xf /tmp/s6_overlay.tar.gz -C / && \
