--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -1,3 +1,13 @@
+FROM golang:1.21 as go-builder
+
+WORKDIR /app
+
+COPY build/dwk/* ./
+RUN \
+    go mod download; \
+    CGO_ENABLED=0 GOOS=linux go build -o ./dwk
+
+
 FROM alpine:3.16 as builder
 
 ARG LIBTORRENT_TAG
@@ -94,6 +104,11 @@ RUN \
     rm -r /root/qbittorrent /root/libtorrent
 
 COPY rootfs /
+
+RUN \
+    # Add go binaries from go-builder stage
+    --mount=type=bind,from=go-builder,src=/app/,dst=/mnt/go-builder/ \
+    cp /mnt/go-builder/dwk /helper/dwk
 
 RUN \
     # Set exec permissions
