Update default qBittorrent config

--- a/rootfs/defaults/qBittorrent.conf
+++ b/rootfs/defaults/qBittorrent.conf
@@ -1,11 +1,12 @@
 [BitTorrent]
 Session\BTProtocol=Both
+Session\DefaultSavePath=/downloads
+Session\TempPath=/downloads/temp
+
+[Network]
+PortForwardingEnabled=false
 
 [Preferences]
-Connection\UPnP=false
-Downloads\SavePath=/downloads/
-Downloads\TempPath=/downloads/incomplete/
-Downloads\TempPathEnabled=false
 WebUI\Username=admin
 WebUI\Port=8080
 WebUI\HostHeaderValidation=false
