Capability to bind VPN interface to BitTorrent session

--- a/rootfs/defaults/qBittorrent.conf
+++ b/rootfs/defaults/qBittorrent.conf
@@ -2,6 +2,8 @@
 Session\BTProtocol=Both
 Session\DefaultSavePath=/downloads
 Session\TempPath=/downloads/temp
+Session\Interface=
+Session\InterfaceName=
 
 [Network]
 PortForwardingEnabled=false
