--- a/Dockerfile.compile
+++ b/Dockerfile.compile
@@ -81,11 +81,14 @@ RUN \
         wireguard-go
 
 COPY ./build/build-scripts /tmp/build-scripts
+# You can find the available release tags at https://github.com/just-containers/s6-overlay/releases
+ARG S6_OVERLAY_TAG="v3.2.0.0"
 RUN \
     # Install s6-overlay
-    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/bin/sh /tmp/build-scripts/s6-overlay-arch).tar.gz -O /tmp/s6_overlay.tar.gz && \
-    tar -xf /tmp/s6_overlay.tar.gz -C / && \
-    rm -r /tmp/*
+    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-$(/bin/sh /tmp/build-scripts/s6-overlay-arch).tar.xz -O /tmp/s6_overlay.tar.xz && \
+    wget https://github.com/just-containers/s6-overlay/releases/download/${S6_OVERLAY_TAG}/s6-overlay-noarch.tar.xz -O /tmp/s6_overlay-noarch.tar.xz && \
+    tar -C / -Jxpf /tmp/s6_overlay.tar.xz && \
+    tar -C / -Jxpf /tmp/s6_overlay-noarch.tar.xz 
     
 RUN \
     # Mount files from build stage
@@ -111,11 +114,13 @@ COPY rootfs /
 RUN \
     # Add go binaries from go-builder stage
     --mount=type=bind,from=go-builder,src=/app/,dst=/mnt/go-builder/ \
-    cp /mnt/go-builder/dwk /helper/dwk
+    cp /mnt/go-builder/dwk /scripts/helper/dwk
 
-RUN \
+RUN \ 
     # Set exec permissions
-    chmod +x -R /helper/ /etc/cont-init.d/ /etc/services.d/
+    chmod +x -R /scripts/ /etc/s6-overlay && \
+    # Remove temporary files
+    rm -r /tmp/*
 
 VOLUME /config /downloads
 EXPOSE 8080
