--- a/docs/examples/compose/example-ovpn.yml
+++ b/docs/examples/compose/example-ovpn.yml
@@ -1,5 +1,3 @@
-version: "3.3"
-
 services:
   qbittorrent:
     image: trigus42/qbittorrentvpn
@@ -18,3 +16,6 @@ services:
       - NET_ADMIN
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
+      - net.ipv6.conf.all.disable_ipv6=0
+    devices:
+      - /dev/net/tun
